<resources>
    <string name="app_name">SungWooAlarmApp.</string>
    <string name="alarm_list_name">알람</string>
    <string name="alarm_list_cancel">취소</string>
    <string name="alarm_list_confirm">생성</string>
    <string name="alarm_list_change">변경</string>
    <string name="alarm_active">등록</string>
    <string name="alarm_inactive">해제</string>
    <string name="alarm_activeIm">등록불가</string>

    <string name="day_sunday">일</string>
    <string name="day_monday">월</string>
    <string name="day_tuesday">화</string>
    <string name="day_wednesday">수</string>
    <string name="day_thursday">목</string>
    <string name="day_friday">금</string>
    <string name="day_saturday">토</string>

    <string name="detail_memo">메모</string>

    <string name="stop_playing">끄기</string>

    <string name="intent_isCreate">ISCREATE</string>
    <string name="intent_alarmIndex">ALARMINDEX</string>
    <string name="intent_isStart">ALARMSTART</string>
    <string name="intent_alarmMemo">ALARMMEMO</string>
    <string name="intent_id">INTENTID</string>
    <string name="intent_alarmId">ALARMID</string>
    <string name="intent_alarmRepeat">ALARMREPEAT</string>
    <string name="intent_dayOfWeek">ALARMDAYOFWEEK</string>
    <string name="expected_error">오류</string>

    <string name="pref_ID">PREFID</string>
    <string name="pref_alarm">PREFALARM</string>
</resources>
